Bug 417954 - Dialog for "Configure Icon Sizes" does not change size based on font size
Summary: Dialog for "Configure Icon Sizes" does not change size based on font size
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_icons (other bugs)
Version First Reported In: 5.16.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 434643 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-20 21:26 UTC by launchpad
Modified: 2023-08-13 16:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Screenshot Showing Undersized Dialog for Changing Icon Sizes (694.55 KB, image/png)
2020-02-20 21:26 UTC, launchpad
Details
Forced DPI to 192 (491.33 KB, image/png)
2020-02-21 21:31 UTC, launchpad
Details

Note You need to log in before you can comment on or make changes to this bug.
Description launchpad 2020-02-20 21:26:42 UTC
Created attachment 126233 [details]
Screenshot Showing Undersized Dialog for Changing Icon Sizes

System Settings > Icons > Icons > Configure Icon Sizes :

The "Configure Icon Sizes" button should display a dialog that's wide enough to show all the *full names of the icons* (without ellipses) you're able to resize, instead of placing priority on being the same width as the button you've clicked.

Screenshot: https://i.stack.imgur.com/RghPw.png

ProblemType: Bug
DistroRelease: Ubuntu 19.10
Package: kubuntu-desktop 1.387
ProcVersionSignature: Ubuntu 5.3.0-40.32-generic 5.3.18
Uname: Linux 5.3.0-40-generic x86_64
NonfreeKernelModules: nvidia_modeset nvidia
ApportVersion: 2.20.11-0ubuntu8.4
Architecture: amd64
CurrentDesktop: KDE
Date: Thu Feb 20 15:13:03 2020
InstallationDate: Installed on 2020-02-03 (17 days ago)
InstallationMedia: Kubuntu 19.10 "Eoan Ermine" - Release amd64 (20191017)
ProcEnviron:
 TERM=xterm-256color
 PATH=(custom, no user)
 XDG_RUNTIME_DIR=<set>
 LANG=en_US.UTF-8
 SHELL=/bin/bash
SourcePackage: kubuntu-meta
UpgradeStatus: No upgrade log present (probably fresh install)
Comment 1 launchpad 2020-02-20 21:29:26 UTC
Downstream Bug Report: https://bugs.launchpad.net/kdelibs/+bug/1864112
Comment 2 Nate Graham 2020-02-20 23:28:57 UTC
Cannot reproduce. The pop-up is the right size for me. Can you try out Plasma 5.18? 5.16 is EOL.
Comment 3 launchpad 2020-02-21 21:31:21 UTC
Created attachment 126277 [details]
Forced DPI to 192

Hi Nate. Please see the attachment "Forced DPI to 192". This may be necessary to reproduce the issue. I run KDE on 4K monitors and it is necessary to increase DPI to 192 else GTK applications are too small for my eyes to use them.
Comment 4 Nate Graham 2020-02-21 21:44:21 UTC
That's your problem; don't do that. :) Instead use a 2x scale factor (set on the Display and Monitor page). GTK apps will respect that when run on Plasma.
Comment 5 launchpad 2020-02-21 22:23:36 UTC
Actually, my problem is your lack of empathy regarding the matter.

I have tried the desktop scaling at 2X and it worked very poorly compared to doubling the DPI. For example, Flameshot didn't work with the desktop scaling feature enabled, while it works great at a 192 DPI. Also, in my three 4K monitor setup, if I moved my mouse past the bottom edge of the bottom middle monitor, the whole desktop would scroll down as though that desktop had an additional 2160 pixels that shouldn't even be there. So your suggestions offer more bugs than the DPI solution I've discovered.

I use to be a fan of desktop scaling, but not now. I'm a fan of increasing DPI. It works better. Try it in a multiple 4K monitors setup like mine. You'll see.

The bottom line is, whether you are sympathetic or not, is that the dialog shouldn't place priority on being the exact same width of the button that's clicked. Instead it should accommodate what ever the font-size is (even if the font-size is due to a 192 DPI).

I wish you had 3 or 4 4K monitors to deal with. Until then, I don't expect to persuade you much.

Believe it or not, I report this stuff to help make KDE better. This is minor issue, but the developers need to take what I'm saying into consideration as they design these GUIs, instead of wasting the available horizontal space to ensure the dialog is not bigger than the button that was clicked to launch the dialog.

Anyway, I doubt I've persuaded you, but thanks anyways for at least reading what I've wrote.
Comment 6 Nate Graham 2020-02-22 16:21:15 UTC
I understand that it is frustrating, for sure.

However, note that your reason for not using the official scaling system is bugginess, yet the alternative method you've chosen also has bugs (e.g. this one). Clearly these bugs are less severe than the ones you're avoiding. However it's at least important for those bugs keeping you from using the official system to be reported or else it can't improve to the point were it's adequate for your needs. If you feel the need to use a workaround in the meantime, I understand, but please file bugs on the issues that are preventing you from using the official system.

Looking at the issues you mention:

> Flameshot didn't work with the desktop scaling feature enabled, while it works
> great at a 192 DPI.
Sounds like a bug in Flameshot. Can you file it with the developer of that app?

> Also, in my three 4K monitor setup, if I moved my mouse past the bottom edge of the
> bottom middle monitor, the whole desktop would scroll down as though that desktop
> had an additional 2160 pixels that shouldn't even be there.
Wow, that sounds bizarre! I've never heard of this happening before. Can you file a bug if you haven't already?

Hope that helps!
Comment 7 launchpad 2020-02-22 17:38:22 UTC
Nate,

You don't have to increase the DPI in order to reproduce this issue. All that is necessary is to increase the default font-size, as I show here:
https://www.youtube.com/watch?v=dxgBJaI5yRQ

Hopefully, you agree that people should be able to increase the font-size of their desktop environment and that dialogs should be able to accommodate those larger font-sizes in a reasonable way. To me, ellipsifying should be a last resort way for dealing with larger font-sizes (especially given that there is not tool-tip to even reveal the entirety of what's been ellipsified). Utilizing available screen space should come before ellipsification. Yes, I'm making these words up as I go, but you know what I mean.

I'll take your advise on reporting those other issues as well. However, I firmly believe that what I'm reporting here is a legitimate inflexibility, (minor and petty as it seems).
Comment 8 Nate Graham 2020-02-24 00:21:31 UTC
Aha! That's a reasonable thing to fix, since adjusting the font size is supported. :) The little dialog should definitely adjust to the font size.
Comment 9 Nate Graham 2021-03-21 00:49:20 UTC
*** Bug 434643 has been marked as a duplicate of this bug. ***
Comment 10 Bug Janitor Service 2023-08-06 16:39:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3158
Comment 11 Nate Graham 2023-08-13 16:30:37 UTC
Git commit b910507a4cd36a211b4d14ccd133c39f196033b1 by Nate Graham.
Committed on 13/08/2023 at 18:00.
Pushed by ngraham into branch 'master'.

Remove ability to semi-globally change icon sizes

See https://invent.kde.org/plasma/plasma-desktop/-/issues/58 for reasons
and discussion.
FIXED-IN: 6.0

M  +1    -1    kcms/icons/CMakeLists.txt
D  +0    -62   kcms/icons/iconsizecategorymodel.cpp
D  +0    -47   kcms/icons/iconsizecategorymodel.h
M  +0    -36   kcms/icons/iconssettingsbase.kcfg
M  +0    -32   kcms/icons/main.cpp
M  +0    -6    kcms/icons/main.h
D  +0    -171  kcms/icons/ui/IconSizePopup.qml
M  +0    -23   kcms/icons/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/b910507a4cd36a211b4d14ccd133c39f196033b1