Remove ability to semi-globally change icon sizes

See https://invent.kde.org/plasma/plasma-desktop/-/issues/58 for reasons
and discussion.

BUG: 417954
FIXED-IN: 6.0